--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body ng-controller="mainCtrl">
-<h1>This sky is {{2>1}}ly blue</h1>
+<body ng-controller="mainCtrl as vm">
+  <h1>This sky is {{2>1}}ly blue</h1>
+  <p>Hello {{vm.hello}}</p>
+
+  <input type="text" ng-model="vm.hello">
+
+
   <!-- Jquery for Bootstrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
   <!-- Compiled plugins -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
   <script src="app.js" charset="utf-8"></script>
-
 
 </body>
 
