--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <input type="text" ng-model="vm.hello">
 
   <h3>List of fruits</h3>
+  <p>Search by value:</p>
+  <input ng-model="vm.search">
   <ul>
-    <li ng-repeat="fruit in vm.fruits">{{fruit}}</li>
+    <li ng-repeat="fruit in vm.fruits | filter: vm.search">{{fruit | makePlural}}</li>
   </ul>
   <button class="btn btn-primary" ng-click="vm.alertMe()" name="button">Alert me</button>
 
@@ -33,7 +35,5 @@
   <script src="app.js" charset="utf-8"></script>
 
 </body>
-
-
 
 </html>
