--- a/index.html
+++ b/index.html
@@ -13,23 +13,39 @@
 </head>
 
 <body ng-controller="mainCtrl as vm">
-  <h1>This sky is {{2>1}}ly blue</h1>
-  <p>Hello {{vm.hello}}</p>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigationÒ</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
+        <a class="navbar-brand" href="#">FruitPosts</a>
+      </div>
+      <div class="navbar-collapse collapsed" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a ui-sref="home">Home</a></li>
+          <li><a ui-sref="posts">Posts</a></li>
+        </ul>
 
-  <input type="text" ng-model="vm.hello">
+      </div>
+    </div>
+  </nav>
 
-  <h3>List of fruits</h3>
-
-  <posts-list></posts-list>
-  <button class="btn btn-primary" ng-click="vm.alertMe()" name="button">Alert me</button>
-
+  <ui-view></ui-view>
 
   <!-- Jquery for Bootstrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Compiled plugins -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js" charset="utf-8"></script>
+
+  <!-- Bootstrap the app -->
   <script src="app.js" charset="utf-8"></script>
+  <!-- Components -->
   <script src="posts-list/posts-list.component.js" charset="utf-8"></script>
 
 </body>
