--- a/posts-list/posts-list.html
+++ b/posts-list/posts-list.html
@@ -5,6 +5,7 @@
 
 <ul>
   <li ng-repeat="post in vm.posts | filter: vm.search">
+    id: {{post.id}}
     title: {{post.title}} <br>
     body: {{post.body}}
   </li>
