--- a/posts-list/posts-list.html
+++ b/posts-list/posts-list.html
@@ -1,3 +1,4 @@
+<h2>Chapter 7</h2>
 <h3>List of posts</h3>
 
 <p>Search by value:</p>
@@ -5,7 +6,7 @@
 
 <ul>
   <li ng-repeat="post in vm.posts | filter: vm.search">
-    id: {{post.id}}
+    id: {{post.id}} <br>
     title: {{post.title}} <br>
     body: {{post.body}}
   </li>
