--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigationÒ</span>
+          <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -28,6 +28,11 @@
         <ul class="nav navbar-nav">
           <li><a ui-sref="home">Home</a></li>
           <li><a ui-sref="posts">Posts</a></li>
+          <!-- TODO: Posts
+          Posts not working but the children are
+         -->
+          <li><a ui-sref="posts.incomplete">Incomplete</a></li>
+          <li><a ui-sref="posts.complete">Complete</a></li>
         </ul>
 
       </div>
